@@ -1,5 +1,9 @@
 2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/t/replaced-viewed.sh: Use rm -f instead of rm.
+
+2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/nodes.c (forget_info_file): Function replaced.  Don't 
 	free the file buffer because it could still be referenced in a 
 	displayed node.
